styleindex.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}


body{
    background-color: #cec6c6;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 20px;
}

h1{
    text-align: center;
    color: #333;
    font-family: Arial, sans-serif;
}

p{
    font-size: 1.2em;
    text-align: justify;
    margin: 20px auto;
    max-width: 800px;
    line-height: 1.5;
    color: #555;
    font-family: 'Courier New', Courier, monospace;
    background-color: #f9f9f9;
    padding: 15px;
    border-radius: 8px;
}

h3{
    color: #444;
    font-family: 'Courier New', Courier, monospace;
    max-width: 800px;
    margin: 20px auto;
    padding: 15px;
    background-color: #e0e0e0;
    border-radius: 8px;

    text-align: center;

}

ul{
    max-width: 800px;
    margin: 20px auto;
    list-style-type: disc;
    color: #333;
    font-family: 'Courier New', Courier, monospace;
}

img{
    width: 300px;
    height: 300px;
    display: inline-block;
    transition: transform 0.3s ease;
}

img:hover{
    transform: scale(1.05);
    border-radius: 16px;
}

.in{
    max-width: 800px;
    margin: 20px auto;
}

.item{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    margin: 20px auto;
}


.rname{
    text-align: center;
    font-family: 'Courier New', Courier, monospace;
    color: #333;
    margin-left: 0;
    margin-right: 0;
    max-width: 270px;
}

.item .desc{
    display: inline-block;
    width: 400px;
    height: 300px;
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 48px 24px;
    text-align: center;
    font-family: 'Courier New', Courier, monospace;
    color: #333;
}

